[project]
name = "interactive-plots-jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autograd>=1.8.0",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
]

[dependency-groups]
dev = [
    "jupytext>=1.17.3",
]

[tool.jupytext]
formats = "ipynb,qmd"

